fix blog post footer title dark mode color issue

--- a/src/stylesheets/components/Footer/BlogFooter.module.sass
+++ b/src/stylesheets/components/Footer/BlogFooter.module.sass
@@ -21,6 +21,9 @@
   +screen(small)
     padding-top: 15px
 
+.darkTitle
+  color: $white
+
 .socialMediaBar
   margin-top: auto
   margin-bottom: auto
